# project-euler

haskell/: Time.hs  p1.hs  p1_timed.hs  p2.hs  p3.hs  p4  p4.hs  p5  p5.hs  p5_better  p5_better.hs  test.hs
python/: problem001.py  problem002.py  problem003.py  problem004.py  problem005.py  problem006.py  problem007.py  problem008.py  problem009.py  problem010.py  problem011.py  problem012.py  problem013.py  problem014.py  problem015.py  problem016.py  problem017.py  problem018.py  problem019.py  problem020.py  problem021.py  problem022.py  problem023.py  problem024.py  problem025.py  problem026.py  problem027.py  problem028.py  problem030.py  problem031.py  problem032.py  problem033.py  problem034.py  problem035.py  problem036.py  problem037.py  problem038.py  problem039.py  problem040.py  problem041.py  (+5 more)
rust/: .gitignore  Cargo.toml  README.md
rust/src/: bignum.rs  lib.rs  matrix.rs  numbers.rs  primes.rs  tools.rs
