[package]
name = "euler"
version = "0.1.0"
authors = ["scullionw <scuw1801@usherbrooke.ca>"]

[dependencies]
time = "0.1"
num-integer = "0.1"

[features]
fp = []

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false