[package]
name = "euler"
version = "0.1.0"
authors = ["scullionw <scuw1801@usherbrooke.ca>"]
edition = "2018"

[dependencies]
num-integer = "0.1.41"
fnv = "1.0.6"
benchtest = { path = "../../benchtest"}
num-traits = "0.2.8"
num-bigint = "0.2.2"

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
